# RunTheNumbers

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  script.py
rtn/: rentals.py
src/rtn/: base.py  materials.py
src/rtn/base/: __init__.py  enums.py
src/rtn/materials/: exterior.py  general.py  interior.py
src/rtn/materials/interior/: __init__.py  doors.py  framing.py
src/rtn/materials/interior/carpentry/: __init__.py  doors.py  trim.py  windows.py
src/spiders/home_depot/home_depot/: items.py  middlewares.py  pipelines.py  settings.py
src/spiders/spiders/: middlewares.py  pipelines.py  settings.py
src/spiders/spiders/spiders/: home_depot.py
src/tests/test_materials/test_interior/: test_framing.py  test_framing_cases.py
src/tests/test_materials/test_interior/test_carpentry/: test_trim.py  test_trim_cases.py
